--- a/curriculo.html
+++ b/curriculo.html
@@ -21,6 +21,8 @@
 <p>Ao lado da Senior</p>
 <label>Telefone:</label>
 <p>(47)99938-4318</p>
+<label>Linkedin</label>
+<p><a href="https://www.linkedin.com/in/gustavo-rosauro-a33427138/">https://www.linkedin.com/in/gustavo-rosauro-a33427138/</a></p>
 </div>
 <div class="dados">
 <label>Função:</label>
